<resources>
    <string name="app_name">AdvisingV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UMD CS Advising</string>
    <string name="nav_header_subtitle">Your personal pocket advisor</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_resources">Resources</string>
    <string name="menu_gallery">Tools</string>
    <string name="menu_calendar">Advising Calendar</string>
    <string name="gpa_tab">GPA Calculator</string>
    <string name="course_requests">Course Request Form</string>
    <string name="four_year_plan">4 Year Plan</string>
    <string name="title_activity_utilities">UtilitiesActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="undergrad_overview">At the Department of Computer Science, undergraduates are a priority. Here, you will meet 3,400 (and counting) of the nation\'s top computer science majors. This diverse group of students has interests ranging from systems to programming languages, from algorithms to design and from VR to Robotics. While you are an undergraduate here, you will study fundamentals in computing including programming languages and theory, which will help you later in a variety of courses we offer at the 400-level. After taking classes, perhaps doing research, participating in our honors program, or studying abroad, and completing internships, our students go on to some of the best graduate programs in the world or join start-ups, small and large tech companies, consulting firms, or government organizations.</string>
    <string name="undergrad_overview_title">Undergraduate Studies in Computer Science at the University of Maryland</string>
    <string name="contact_us">Contact Us!!</string>
    <string name="address">1st Floor, Brendan Iribe Center for Computer Science and Engineering</string>
    <string name="phone">(301) 405–2672</string>
    <string name="ugrad_email">ugrad@cs.umd.edu</string>
    <string name="hours">Monday - Friday 8:30 AM to 4:30 PM</string>
    <string name="socials">Facebook / Instagram / Twitter</string>
    <string name="advisors_title">Academic Advisors</string>
    <string name="contact_extra">Part of the Department of Computer Science Brendan Iribe Center for Computer Science and Engineering University of Maryland 8125 Paint Branch Drive College Park, MD 20742 (301) 405–2662</string>
    <string name="head_title">Heads of Staff</string>
    <string name="peers_title">Undergraduate Peer Advising Team</string>
    <string name="gpa_anticipated_header">Anticipated GPA Calculator</string>
    <string name="semester_gpa">Semester GPA:</string>
    <string name="cumulative_gpa">Cumulative GPA:</string>
    <string name="gpa_semester_help">To calculate your anticipated semester GPA:\n\t1. Press the "Add Course" Button to add a course to the calculator\n\t2. Enter the course name, number of credits, and grade.\n\t3. Press the ENTER button to add this course\n\t4. Repeat steps 1 through 3 for each course you are attempting</string>
    <string name="gpa_cumulative_help">To calculate your cumulative GPA:\n\t1. Enter your cumulative attempted credits (1–999)\n\t2. Enter your cumulative GPA between 0.0 and 4.0 </string>
    <string name="add_course">Add Course</string>
    <string name="semester_gpa_0_0">Semester GPA: 0.0</string>
    <string name="letter_grade_hint">+/- Letter Grade</string>
    <string name="course_name_hint">Course Name</string>
    <string name="calculate_cumulative">Calculate Cumulative</string>
    <string name="home">Dashboard</string>
    <string name="calendar">Upcoming</string>
    <string name="notifications">Inbox</string>
    <string name="tools">Settings</string>
    <string name="inbox">inbox</string>
    <string name="your_current_semester">Your Current Semester</string>
    <string name="my_four_year_plan">My Four Year Plan</string>
    <string name="dashboard_tabs">Dashboard Tabs</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="planning">Planning</string>
    <string name="upcoming">Upcoming</string>
    <string name="textview">TextView</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tabs">Tabs</string>
    <string name="cumulative_gpa_0_0">Cumulative GPA: 0.0</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="forms">Forms</string>
    <string name="cmsc_course_request_form">CMSC Course Request Form</string>
    <string name="subject_of_notification">Subject of Notification</string>
    <string name="example_body">This is where the text for the body of the notification will be shown. The text will all not show up. Only whatever fits in the container. Wher then user clicks the item, they wilj be able to see the whole thing as a dialog</string>
    <string name="textviewInbox">TextView</string>
    <string name="unread">Unread</string>
    <string name="grades">Grades</string>
    <string name="dashboardTitleTextView">Dashboard</string>
    <string name="upcomingTitle">Upcoming</string>
    <string name="ugradOverviewTitleTextView">Undergrad Program Overview</string>
    <string name="ugradStudiesSummary">
        "At the Department of Computer Science, undergraduates are a priority. Here, you will meet 3,400 (and counting)
        of the nation\'s top computer science majors. This diverse group of students has interests ranging from systems to
        programming languages, from algorithms to design and from VR to Robotics. While you are an undergraduate here,
        you will study fundamentals in computing including programming languages and theory, which will help you later in
        a variety of courses we offer at the 400-level. After taking classes, perhaps doing research, participating in our
        honors program, or studying abroad, and completing internships, our students go on to some of the best graduate programs
        in the world or join start-ups, small and large tech companies, consulting firms, or government organizations.\n\n"
    </string>
    <string name="ugradAdvsingTeamTextView">Undergraduate Advising Team\n</string>
    <string name="ugradAdvsingTeamSummaryTextView">"The undergraduate advising team assists with the academic and professional development of undergraduate majors and minors in Computer Science. We also coordinate and host myriad social, academic, and professional events including resume workshops, and career and internship fairs.\n\n"
        "As a student, you will interact with the undergraduate office staff during mandatory advising (which occurs once a semester) or whenever you would like to speak with a staff member about any issue. If you are facing academic or emotional difficulties, it is especially important that you contact us as soon as you are able. For general questions or concerns about the undergraduate program, please email us at ugrad@cs.umd.edu. We ask that you include your UID number and explain the purpose of your visit as you schedule your appointment; this helps us to prepare appropriately.\n"
    </string>
    <string name="advisorsTextView">Academic Advisors</string>
    <string name="courtneyTextView">
        "Courtney Cabansag\n"
        "Office: 1154 Brendan Iribe Center\n"
        "Email: cabansag@umd.edu\n\n"
        "Courtney is a Senior Academic Advisor who received her B.A. in Language, Culture &amp; Society
        from the University of California, Santa Barbara and her M.S. in Higher Postsecondary Education
        from Syracuse University. Courtney has worked in academic success, student involvement and leadership
        and most recently residence life before joining the Department of Computer Science in 2019. When she
        isn’t advising, Courtney enjoys exercising (everything from weightlifting to aerial yoga), watching
        reality television, and discovering new vegan recipes.\n\n"
    </string>
    <string name="brysonTextView">
        "Bryson Daniels\n"
        "Email: bdaniel7@umd.edu\n\n"
        "Bryson received his B.S. in Psychology with a Minor in Biological Sciences from Clemson University,
        and his M.Ed. in Higher Education Administration from Auburn University. Prior to joining the Computer
        Science Department, he worked within the Gossett Student-Athlete Center at the University of Maryland
        as the Interim Athletic Academic Counselor for Men's Wrestling. In his spare time, Bryson enjoys running, reading,
        and exploring the DMV area with friends and family.\n\n"
    </string>
    <string name="christineTextView">
        "Christine Denis\n"
        "Office: 1152 Brendan Iribe Center\n"
        "Email: cdenis@umd.edu\n\n"
        "Christine is a Senior Academic Advisor who received her B.S. in Psychology with a concentration in
        counseling at East Stroudsburg University and her M.S. in Higher Education Policy &amp; Student Affairs
        from West Chester University. Prior to joining the Computer Science Department in 2019, Christine worked
        with academic probation students and first-year Achieve! program students to cultivate academic and personal
        success at West Chester University. Christine has a special interest supporting Exploratory/Undeclared students
        in navigating indecision and declaring a major. In her free time, she enjoys traveling to the Pocono Mountains
        to visit family and friends, hiking, and spending time with her dog.\n\n"
    </string>
    <string name="erikTextView">
        "Erik Johanson\n"
        "Office: Brendan Iribe Center\n"
        "Email: ejohanso@umd.edu\n\n"
        "Erik received his B.S. in Biology and B.A. in History from Providence College, and his M.A. in English Literature
        from the Catholic University of America. Prior to joining the Computer Science Department, he taught literature, writing,
        and rhetoric at Catholic University and acted as a professional writing tutor at the United States Naval Academy.
        His research interests include writing pedagogy in STEM fields, best practices for university Writing Centers, and
        British Renaissance poetry. In his free time, Erik enjoys reading, writing, playing video games, and everything LEGO.\n\n"
    </string>
</resources>