<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/page_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:visible="true" />
    <item
        android:id="@+id/page_calendar"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_calendar_month_24"
        android:title="@string/calendar"
        android:visible="true" />

    <item
        android:id="@+id/page_inbox"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_inbox_24"
        android:title="@string/inbox" />

    <item
        android:id="@+id/page_tools"
        android:enabled="true"
        android:icon="@drawable/ic_utility_24"
        android:title="@string/tools"
        android:visible="true" />

</menu>