<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/drawer_calendar"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_calendar" />


        <item
            android:id="@+id/drawer_form"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/forms"/>


        <item
            android:id="@+id/nform"
            android:icon="@drawable/ic_baseline_assignment_24"
            android:title="@string/forms"/>

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/ic_utility_24"
            android:title="@string/action_settings"/>


    </group>
</menu>