<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gpaFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="true"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    android:layout_centerInParent="true"
    android:layout_centerHorizontal="false"
    android:layout_centerVertical="true"
    android:clipChildren="true"
    android:clipToPadding="true"
    android:isScrollContainer="true"
    android:layoutDirection="inherit"
    android:layoutMode="opticalBounds"
    android:orientation="vertical"
    android:padding="8dp"
    android:textAlignment="viewStart"
    android:verticalScrollbarPosition="defaultPosition"
    app:layout_collapseMode="parallax"
    tools:actionBarNavMode="tabs"
    tools:context=".GpaCalculatorFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/grades"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/primary"
                android:textSize="48sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardSemester"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:cardBackgroundColor="@color/design_default_color_background"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|fill"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/textViewSemGpaSubHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/semester_gpa"
                        android:textAppearance="@style/Theme.AdvisingV2"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewSemHelp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:layout_margin="8dp"
                        android:baselineAligned="true"
                        android:contentDescription="@string/course_name_hint"
                        android:text="@string/gpa_semester_help"
                        android:textAlignment="textStart"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/material_dynamic_neutral20"
                        android:textSize="14sp"
                        android:typeface="normal"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/textViewSemGPAOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/semester_gpa_0_0" />

                    <Button
                        android:id="@+id/buttonAddCourse"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/add_course" />
                </LinearLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardCumulative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:animateLayoutChanges="false"
                android:clickable="false"
                android:layoutDirection="inherit"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="@dimen/appbar_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/cum_gpa_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="8dp"
                        android:layout_marginTop="24dp"
                        android:text="@string/cumulative_gpa"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/textViewSemInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="30dp"
                        android:layout_marginVertical="8dp"
                        android:layout_marginTop="28dp"
                        android:text="@string/gpa_semester_help" />

                    <TextView
                        android:id="@+id/textViewCumulativeOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cumulative_gpa_0_0" />

                    <Button
                        android:id="@+id/buttonCalculateCumulative"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:width="150dp"
                        android:elegantTextHeight="true"
                        android:elevation="8dp"
                        android:text="@string/calculate_cumulative"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>