<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.OverviewFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Undergraduate Studies in Computer Science at the University of Maryland\n"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                android:textColor="@color/primary"
                android:textSize="30sp"/>


            <TextView
                android:id="@+id/textViewUgradStudiesSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/undergrad_overview"
                android:textAlignment="center"
                android:textSize="15sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/design_default_color_background"
                app:cardCornerRadius="20dp"
                app:cardElevation="8dp"
                app:cardPreventCornerOverlap="true"
                app:cardUseCompatPadding="true"
                app:contentPadding="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/textViewUgradAdvsingTeam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ugradAdvsingTeamTextView"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="24sp"/>

                    <TextView
                        android:id="@+id/textViewUgradAdvsingTeamSummary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ugradAdvsingTeamSummaryTextView"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display4"
                        android:textSize="15sp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</androidx.core.widget.NestedScrollView>
